--- a/style.css
+++ b/style.css
@@ -1,3 +1,11 @@
 body{
-    background:black;
+    background-color:black;
+margin: 0 auto;
+}
+canvas{
+    position:absolute;
+    height: 100%;
+    width: 100%;
+    top: 0;
+    left: 0;
 }
